# teh-o-prke

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: prke_theory.bib  prke_theory.typ
examples/fhr_sim_v1/: main.rs
examples/fhr_sim_v1/app/: mod.rs  side_panel.rs
examples/fhr_sim_v1/app/graph_data/: mod.rs  update.rs
examples/fhr_sim_v1/app/graph_pages/: mod.rs
examples/fhr_sim_v1/app/local_widgets_and_buttons/: fhr_reactor_widget.rs  mod.rs  pipes.rs  reactor_art.rs  simulator_trait.rs
examples/fhr_sim_v1/app/panel_enum/: mod.rs
examples/fhr_sim_v1/app/prke_backend/: decay_heat.rs  mod.rs  pebble_bed_thermal_hydraulics.rs
examples/fhr_sim_v1/app/thermal_hydraulics_backend/: components.rs  fhr_thermal_hydraulics_state.rs  mod.rs  pri_loop_fluid_mechanics_calc_fns.rs
examples/fhr_sim_v1/app/thermal_hydraulics_backend/pri_loop_fluid_mechanics_calc_fns/: mod.rs  parallel_branch_flow_calculator.rs
examples/simple_prke_control_rod_fuel_temp_feedback_demo/client/: app.rs  main.rs
examples/simple_prke_control_rod_fuel_temp_feedback_demo/client/app/panels/: first_order_transfer_fn.rs  opcua_panel.rs  second_order_transfer_fn.rs
examples/simple_prke_control_rod_fuel_temp_feedback_demo/server/: main.rs
examples/zero_power_prke_demo/client/app/panels/: decaying_sinusoid.rs  opcua_panel.rs
examples/zero_power_prke_demo/server/: main.rs
pki/own/: cert.der
pki/private/: private.pem
src/: control_rod_feedback.rs  decay_heat.rs  fuel_temperature_feedback.rs  lib.rs  teh_o_prke_error.rs  temperature_feedback.rs
src/feedback_mechanisms/: README.md  mod.rs
src/feedback_mechanisms/fission_product_poisons/: mod.rs
src/simple_prke_control_rod_fuel_temp_feedback_demo/client/: app.rs  main.rs
src/simple_prke_control_rod_fuel_temp_feedback_demo/client/app/panels/: opcua_panel.rs
src/simple_prke_control_rod_fuel_temp_feedback_demo/server/: main.rs
src/time_stepping/: Euler.C  mod.rs  ode.rs  openfoam_ode_system.rs  openfoam_rfk45.rs
src/time_stepping/openfoam_source_files/: ODESolver.C  ODESolver.H  ODESystem.H  RKF45.H  Rosenbrock34.C
src/zero_power_prke/: mod.rs  six_group.rs  six_group_precursor_prke.rs  six_group_prke.rs  tests.rs
src/zero_power_prke/six_group_precursor_prke/: explicit_solver.rs  implicit_solver.rs  mod.rs  six_group_constants.rs
src/zero_power_prke_demo/client/: app.rs  main.rs
src/zero_power_prke_demo/client/app/panels/: mod.rs  opcua_panel.rs
src/zero_power_prke_demo/server/: main.rs
